--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
 <body>
-<h1>Modelo vasija en 3D con textura</h1>
+<h1>Modelo escultura en 3D con textura</h1>
 <p>
-    En esta página web se puede consultar la recreación en 3D de este modelo de vasija romana con textura. 
+    En esta página web se puede consultar la recreación en 3D de este modelo de escultura con textura. 
 </p>
 <x3d width='800px' height='800px'>
 <scene>
-<Viewpoint position="352.82852 25.05022 63.22924" orientation="0.00727 0.99923 -0.03857 1.43116" 
-	 centerOfRotation="133.83867 33.98898 32.13447" fieldOfView="0.78540" description="defaultX3DViewpointNode"></Viewpoint>
-<inline url="https://raw.githubusercontent.com/RicardoGJurado/Practica-5/main/Vasija%2015kk.x3d"> </inline>
+<Viewpoint position="-29.30955 -465.79150 909.08921" orientation="0.00000 0.00000 0.00000 0.00000" 
+	zNear="114.78612" zFar="408.61171" centerOfRotation="-31.77508 -447.55896 685.38370" fieldOfView="0.78540" description="defaultX3DViewpointNode"></Viewpoint>
+<inline url="https://raw.githubusercontent.com/RicardoGJurado/Practica-5/main/Escultura%20final.x3d"> </inline>
 </scene>
 </x3d>
 <p>
-    Se trata de un modelo de cerámica romana de paredes finas propiedad del Museo  Arqueológico-Etnográfico de Puebla de Don Fadrique. Ha sido digitalizado por Celia Romo Peña en el Servicio de digitalización 3D del Laboratorio de Realidad Virtual de la Universidad de Granada  usando un escaner Minolta Vivid 910, dentro de las actividades realizadas en el Máster de Desarrollo de Software de la Universidad de Granada.
-
- Unidades: Milímetros
+    Se trata de un modelo de escultura de plastilina digitalizado por Pedro Cano Olivares usando un escáner Minolta Vivid 910 en el Servicio de digitalización 3D del Laboratorio de Realidad Virtual de la Universidad de Granada
 
 </p>
   </body>
